--- a/assests/assests/css/style.css
+++ b/assests/assests/css/style.css
@@ -47,8 +47,6 @@ h2 {
 .image1 {
     float: left;
     margin: 20px;
-    animation-duration: 4s;
-    animation-name: slidein;
 }
 
 p {
@@ -71,33 +69,41 @@ input[type=text] {
 }
 
 .submit {
-    color:rgb(7, 14, 17);
+    color:#69C7E8;
     background-color: rgb(8, 3, 12);
     position: absolute;
     font-family: 'Righteous',cursive;
     font-size: 35px;
     background-color: red;
     position: relative;
+    width: 100px;
+    height: 100px;
+    -webkit-animation-name: submit; 
+    -webkit-animation-duration: 4s; 
+    animation-name: submit;
     animation-duration: 4s;
-    animation-name: slidein;
 }
 
-@keyframes slidein {
-    from {
-      margin-left: 100%;
-      width: 300%; 
-    }
-  
-    to {
-      margin-left: 0%;
-      width: 100%;
-    }
-  }
+@-webkit-keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+}
+
+@keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
+}
 
 .image {
     position: relative;
     float: left;
-    margin: 20px;
+    margin: 40px;
     font-family: 'Righteous',cursive;
 }
 
@@ -116,10 +122,8 @@ input[type=text] {
     padding-right: 30px;
     padding-top: -20px;
     border: black solid 4px;
-    animation-duration: 4s;
-    animation-name: slidein;
-}
 
+}
 .wrapper {
     margin-bottom: -50px;
     min-height: 100%;
@@ -130,7 +134,7 @@ input[type=text] {
     height: 50px;
     bottom: 0px;
     position: fixed;
-    left: 150px;
+    left: 50px;
     color: rgba(8, 243, 243, 0.966);
     font-weight:bolder;
     
@@ -143,38 +147,34 @@ form {
 @media screen and (max-width: 990px) {
     .wrapper {
         width: 700px;
-        padding: 20px 30px 20px;
+        padding: 20px 50px 20px;
     }
     .background {
         width: 700px;
-    }
-    
-    .image {
-        width: 30%;
+        padding: 20px 50px 20px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .wrapper {
-        width: 650px;
+        width: 500px;
+        padding: 10px 40px 10px;
     }
     .background {
-        width: 650px;
-    }
-    .image {
-        width: 250px;
+        width: 500px;
+        padding: 10px 40px 10px;
     }
 }
 
 @media screen and (max-width: 640px) {
     .wrapper {
-        width: 360px;
+        width: 400px;
+        padding: 10px 10px 10px;
         
     }
-    .image {
-        width: 200px;
-    }
     .background {
-        width: 360px;
+        width: 400px;
+        padding: 10px 10px 20px;
+      
     }
 }
