--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,4 +1,5 @@
 .links{
+    border: 960px;
     float: right;
     background-color: rgba(34, 12, 12, 0.137);
     font-family: sans-serif;
@@ -12,7 +13,7 @@ body {
     font-family: Courier;
     background-image: url('../images/bg.png');
     color: white;
-    padding: 5px 5px 10px;
+    padding: 25px 10px 50px;
     
 }
 html, body {
@@ -23,7 +24,6 @@ html, body {
 .background {
     background-color: #5856532a;
 }
-
 h1 {
     font-family: 'Righteous',cursive;
     font-weight: bold;
@@ -43,6 +43,8 @@ h2 {
 .image1 {
     float: left;
     margin: 20px;
+    animation-duration: 4s;
+    animation-name: slidein;
 }
 
 p {
@@ -65,21 +67,33 @@ input[type=text] {
 }
 
 .submit {
-    color:#69C7E8;
+    color:rgb(7, 14, 17);
     background-color: rgb(8, 3, 12);
     position: absolute;
     font-family: 'Righteous',cursive;
     font-size: 35px;
     background-color: red;
     position: relative;
-    width: 100px;
-    height: 100px;
+    animation-duration: 4s;
+    animation-name: slidein;
 }
+
+@keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%; 
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
 
 .image {
     position: relative;
     float: left;
-    margin: 40px;
+    margin: 20px;
     font-family: 'Righteous',cursive;
 }
 
@@ -88,7 +102,6 @@ input[type=text] {
     clear: both;
     display: table;
   }
-
 .item {
     position: absolute;
     left: 35px;
@@ -99,8 +112,10 @@ input[type=text] {
     padding-right: 30px;
     padding-top: -20px;
     border: black solid 4px;
-
+    animation-duration: 4s;
+    animation-name: slidein;
 }
+
 .wrapper {
     margin-bottom: -50px;
     min-height: 100%;
@@ -111,7 +126,7 @@ input[type=text] {
     height: 50px;
     bottom: 0px;
     position: fixed;
-    left: 50px;
+    left: 150px;
     color: rgba(8, 243, 243, 0.966);
     font-weight:bolder;
     
@@ -123,35 +138,39 @@ form {
 
 @media screen and (max-width: 990px) {
     .wrapper {
-        width: 700px;
-        padding: 20px 50px 20px;
+        width: 500px;
+        padding: 20px 30px 20px;
     }
     .background {
-        width: 700px;
-        padding: 20px 50px 20px;
+        width: 500px;
+    }
+    
+    .image {
+        width: 30%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .wrapper {
-        width: 500px;
-        padding: 10px 40px 10px;
+        width: 650px;
     }
     .background {
-        width: 500px;
-        padding: 10px 40px 10px;
+        width: 650px;
+    }
+    .image {
+        width: 250px;
     }
 }
 
 @media screen and (max-width: 640px) {
     .wrapper {
-        width: 400px;
-        padding: 0px 0px 10px;
+        width: 360px;
         
     }
+    .image {
+        width: 200px;
+    }
     .background {
-        width: 400px;
-        padding: 0px 0px 10px;
-      
+        width: 360px;
     }
 }
